# libspindle

./: Makefile.am  README  build.mk  configure.in
examples/: .gitignore  Makefile.am  example1.c  example2.c
src/: Makefile.am  spindle.c  spindle.h  spindle_internal.h  spindle_version.h
